# VETA

./: .gitattributes  .gitignore  Dockerfile  README.md  conda_environment.yml  conda_environment_update.yml  config.txt  pyproject.toml  requirements.conda  requirements.pip  requirements.txt  requirements_minimal.pip  setup.cfg  setup.py
analysis/: latex.py  main.py  osutils.py  requirements.conda  requirements.pip
analysis/datasets/: __init__.py  disease_specific_analysis.py  utils.py
analysis/plots/: feature_selection.py  heatmap.py  performance_comparison.py  threshold_analysis.py  utils.py
datasets/cardiomyopathy/: 2_cardiomyopathy_benign.vcf.gz.tbi  2_cardiomyopathy_deleterious.vcf.gz.tbi
datasets/clinvar/: .gitignore  README.md  clinvar_vep_03_2019.vcf.bgz  clinvar_vep_03_2019.vcf.bgz.tbi
datasets/hcm_manually_curated/: .gitignore  benign.vcf.gz.tbi  pathogenic.vcf.gz.tbi
datasets/humsavar/: humsavar.benign.final.vcf.gz.tbi  humsavar.deleterious.final.vcf.gz.tbi
datasets/swissvar/: swissvar.benign.final.vcf.gz.tbi  swissvar.deleterious.final.vcf.gz.tbi
datasets/unifun/: unifun.benign.alltools.vcf.gz.tbi  unifun.deleterious.alltools.vcf.gz.tbi
dbs/: .gitignore  README.md
src/: base.py  benchmark.py  filters.py  inspect.py  interrogate.py  latex.py  main.py  map_tools2vcf_annotation.txt  osutils.py  thresholds.py  veta.py
src/config/: tools_config.txt
src/plots/: plot_heatmap.py  plots_benchmark_mode.py  plots_inspect_mode.py  plots_interrogate_mode.py  plots_intronic_analysis.py  plots_machine_learning.py  plots_performance_comparison.py  plots_threshold_analysis.py  plots_unseen_vcf_analysis.py  plots_utils.py
src/predictions/: apply.py  apply_tools.py  filters.py  introns.py  metapredictions.py  metrics.py  ml_classifiers.py  ml_cost_aware_rfecv.py  ml_feature_ranking.py  ml_prepare_dataset.py  ml_single_feature_classifier.py  performance_comparison.py  scores_evaluation_unseen_vcf.py  threshold_analysis.py  thresholds.py  utils_classifiers.py
src/preprocessing/: __init__.py  _old_disease_specific.py  clinvar.py  latex.py  location.py  osutils.py  tables.py  utils.py  utils_tools.py  vcf.py  vcf_cleaning.py  vcf_processing.py  vep.py  vep_cleaning.py
(+19 files in other folders)
