[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "veta"
description = "Simple variant prediction evaluation"
authors = [
    {name = "Pedro Barbosa", email = "psbpedrobarbosa@gmail.com"},
]

version = "0.7.0"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "matplotlib==3.5.1",
    "numpy==1.22.3",
    "pandas==1.4.2",
    "seaborn==0.11.2",
    "cyvcf2==0.30.15",
    "scikit-learn==1.0.2",
    "imbalanced-learn==0.9.0",
    "hgvs==1.5.2",
    "fastcluster==1.2.6",
    "statannotations==0.4.4",
    "gplearn==0.4.1",
    "sklearn-pandas==2.2.0",
    "dtreeviz==1.3.5"
]

[project.urls]
homepage = "https://github.com/PedroBarbosa/VETA"
repository = "https://github.com/PedroBarbosa/VETA"
documentation = "https://github.com/PedroBarbosa/VETA"

[project.license]
text = "https://opensource.org/licenses/GPL-3.0"

[tool.setuptools.package-data]
tools_config = ["config/tools_config.txt"]

[project.scripts]
veta = "veta:main"
