[metadata]
name = veta
version = 0.5.5
author = Pedro Barbosa
author_email = psbpedrobarbosa@gmail.com
description = Package that benchmarks variant prediction tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PedroBarbosa/VETA
project_urls =
    Bug Tracker = https://github.com/PedroBarbosa/VETA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT Licence
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    matplotlib==3.5.1
    numpy==1.22.3
    pandas==1.4.2
    seaborn==0.11.2
    cyvcf2==0.30.15
    scikit-learn==1.0.2
    imbalanced-learn==0.9.0
    hgvs==1.5.2
    fastcluster==1.2.6
    statannotations==0.4.4
    gplearn==0.4.1
    sklearn-pandas==2.2.0
    dtreeviz==1.3.5

[options.packages.find]
where = src

[options.package_data]
data_files = 'config/tools_config.txt'

[options.entry_points]
console_scripts =  
    veta = veta:main
